<resources>
    <string name="app_name">ECL_project_file</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mhf_return_pouring">MHF Return Pouring</string>
    <string name="mhf_recall">MHF Recall</string>
    <string name="mhf_return_ladle_sequence">MHF Return Ladle Sequence</string>
    <string name="mhf_ladle_weight_out">MHF Ladle Weight Out</string>
    <string name="max_kw_given">Max KW Given</string>
    <string name="stop_pouring">Stop Pouring</string>
    <string name="start_pouring">Start Pouring</string>
    <string name="mhf_furnace_pouring">MHF Furnace Pouring</string>
    <string name="mhf_furnace_pouring_stopped">MHF Furnace Pouring Stopped</string>
    <string name="authenticated">Authenticated</string>
    <string name="fri_22th_aug">Fri,22th Aug</string>
    <string name="_11_15_00">11:15:00</string>
    <string name="shift_a">Shift: A</string>
    <string name="plant_ecl_main">Plant: ECL Main</string>
    <string name="mhf_no">MHF No:</string>
    <string name="assigned_department">Assigned Department</string>
    <string name="mp_convereter">MP Convereter</string>
    <string name="logout">Logout</string>
    <string name="temperature_control">Temperature Control</string>
    <string name="production_process">Production Process</string>
    <string name="mhf_operations">MHF Operations</string>
    <string name="data_recording">Data Recording</string>
    <string name="last_login_12_31_2024_08_30_am">Last login: 12/31/2024 08:30 AM</string>
    <string name="electrosteel_castings_limited">ELECTROSTEEL CASTINGS LIMITED</string>
    <string name="mini_heel_production_system">Mini Heel Production System</string>
    <string name="step_1_temperature_amp_mhf_configuration"><![CDATA[Step 1: Temperature & MHF Configuration]]></string>
    <string name="production_process1">Production Process</string>
    <string name="dept">Dept:</string>
</resources>