<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TabScreen.MiniHeel.MHFProcessFragment">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <include
                layout="@layout/third_fragment_upper_part"
                android:id="@+id/thirdFragmentUpperPart" />

            <androidx.cardview.widget.CardView
                android:id="@+id/lowerPart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                app:cardBackgroundColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/thirdFragmentUpperPart"
                app:layout_constraintStart_toStartOf="@+id/thirdFragmentUpperPart"
                app:layout_constraintEnd_toEndOf="@+id/thirdFragmentUpperPart">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/thirdFragmentUpperPart">

                    <!-- 50% vertical guideline -->
                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guidelineHalf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.4" />

                    <!-- Section Title -->
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="MHF Pouring Control"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- Input Controls Label -->
                    <TextView
                        android:id="@+id/inputControls"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Input Controls"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@id/guidelineHalf"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title" />

                    <!-- Output Controls Label -->
                    <TextView
                        android:id="@+id/outputControls"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="Output Controls"
                        android:textColor="@android:color/holo_green_dark"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/guidelineHalf"
                        app:layout_constraintTop_toBottomOf="@id/title" />

<!--                    &lt;!&ndash; Divider line &ndash;&gt;-->
<!--                    <View-->
<!--                        android:id="@+id/view"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="1dp"-->
<!--                        android:layout_marginTop="60dp"-->
<!--                        android:layout_marginBottom="12dp"-->
<!--                        android:background="@android:color/darker_gray"-->
<!--                        app:layout_constraintEnd_toEndOf="parent"-->
<!--                        app:layout_constraintStart_toStartOf="parent"-->
<!--                        app:layout_constraintTop_toTopOf="parent" />-->

                    <!-- Input Section Example -->
                    <TextView
                        android:id="@+id/mhfPouring"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/mhf_return_pouring"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/outputControls" />

                    <EditText
                        android:id="@+id/etReturnPouring"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="#F2F2F2"
                        android:hint="Enter return pouring amount"
                        android:textSize="14sp"
                        android:padding="8dp"
                        app:layout_constraintEnd_toStartOf="@id/guidelineHalf"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/mhfPouring" />

                    <TextView
                        android:id="@+id/mhfRecall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/mhf_recall"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/etReturnPouring" />

                    <Button
                        android:id="@+id/btnRecall"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:backgroundTint="@color/success_dark"
                        android:text="MHF Recall"
                        android:textColor="@android:color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/mhfRecall" />

                    <TextView
                        android:id="@+id/mhfReturnLadle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/mhf_return_ladle_sequence"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btnRecall" />

                    <Spinner
                        android:id="@+id/spReturnLadleSequence"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="5dp"
                        android:background="#F2F2F2"
                        app:layout_constraintEnd_toStartOf="@id/guidelineHalf"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/mhfReturnLadle" />

                    <TextView
                        android:id="@+id/mhfLadleWeightIN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/mhf_ladle_weight_in"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/spReturnLadleSequence" />

                    <TextView
                        android:id="@+id/edtMhfLadleWeightIN"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="#F2F2F2"
                        android:hint="450"
                        android:padding="8dp"
                        app:layout_constraintEnd_toStartOf="@id/guidelineHalf"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/mhfLadleWeightIN" />

                    <TextView
                        android:id="@+id/mhfLadleOutSeq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/mhf_return_ladle_sequence"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/guidelineHalf"
                        app:layout_constraintTop_toBottomOf="@id/outputControls"

                        />

                    <Spinner
                        android:id="@+id/spMhfLadleOutSeq"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:background="#F2F2F2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/guidelineHalf"
                        app:layout_constraintTop_toBottomOf="@id/mhfLadleOutSeq" />

                    <Button
                        android:id="@+id/btnStartPouring"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/success_dark"
                        android:text="Start Pouring"
                        app:layout_constraintStart_toEndOf="@id/guidelineHalf"
                        app:layout_constraintTop_toBottomOf="@+id/spMhfLadleOutSeq" />

                    <Button
                        android:id="@+id/btnStopPouring"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/warning_dark"
                        android:text="Stop Pouring"
                        app:layout_constraintStart_toEndOf="@id/btnStartPouring"
                        app:layout_constraintTop_toBottomOf="@+id/spMhfLadleOutSeq" />

                    <TextView
                        android:id="@+id/mhfLadleWeightOut"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/mhf_ladle_weight_in"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/guidelineHalf"
                        app:layout_constraintTop_toBottomOf="@+id/btnStartPouring" />

                    <TextView
                        android:id="@+id/edtMhfLadleWeightOut"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:background="#F2F2F2"
                        android:hint="450"
                        android:padding="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/guidelineHalf"
                        app:layout_constraintTop_toBottomOf="@+id/mhfLadleWeightOut" />

                    <TextView
                        android:id="@+id/maxWtGiven"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/max_kw_given"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@id/guidelineHalf"
                        app:layout_constraintTop_toBottomOf="@+id/edtMhfLadleWeightOut" />

                    <EditText
                        android:id="@+id/edtMaxWtGiven"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:background="#F2F2F2"
                        android:hint="Enter KW Value"
                        android:padding="8dp"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/guidelineHalf"
                        app:layout_constraintTop_toBottomOf="@+id/maxWtGiven" />

                    <Button
                        android:id="@+id/btnMHFLadleOut"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="170dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/status_maintenance"
                        android:text="MHF Ladle Out"
                        app:layout_constraintStart_toStartOf="@+id/edtMaxWtGiven"
                        app:layout_constraintTop_toBottomOf="@+id/edtMaxWtGiven" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>